--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.25.0",
+    "buffer": "^6.0.3",
     "chart.js": "^2.9.3",
+    "cors": "^2.8.5",
     "materialize-css": "^1.0.0",
     "moment": "^2.29.1",
     "react": "^16.13.1",
@@ -20,7 +22,8 @@
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
+    "react-simple-captcha": "^9.3.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
