--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "buffer": "^6.0.3",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
     "materialize-css": "^1.0.0",
     "moment": "^2.29.1",
     "react": "^16.13.1",
