--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "13.0.1",
+    "node": "22.x",
     "npm": "6.12.0"
   },
   "dependencies": {
