--- a/client/Dockerfile.frontend
+++ b/client/Dockerfile.frontend
@@ -1,29 +1,31 @@
-# Use Node.js base image
-FROM node:18
+# Use a smaller Node.js base image
+FROM node:18-alpine AS build
 
 # Set working directory inside the container
 WORKDIR /app
 
 # Copy package files separately for better caching
-COPY package*.json ./
+COPY package.json package-lock.json ./
 
 # Install dependencies
-RUN npm install
-
-# Copy the .env file
-COPY .env .env 
+RUN npm install --production
 
 # Copy the rest of the frontend files
-COPY . .
+COPY . . 
 
 # Build the React app (includes .env)
 RUN npm run build
 
-# Install serve (lightweight static file server)
-RUN npm install -g serve
+# Use a lightweight web server to serve static files
+FROM node:18-alpine
+
+WORKDIR /app
+
+# Copy the built React app from the build stage
+COPY --from=build /app/build /app/build
 
 # Expose frontend port
 EXPOSE 3000
 
-# Serve the React app
-CMD ["serve", "-s", "build", "-l", "3000"]
+# Serve the React app using npx serve
+CMD ["npx", "serve", "-s", "build", "-l", "3000"]
