--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         app: backend
     spec:
+      tolerations:
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
+          effect: "NoSchedule"
       containers:
         - name: backend
           image: somnathambati/smartvote_backend:latest
