--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         app: frontend
     spec:
+      tolerations:
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
+          effect: "NoSchedule"
       containers:
         - name: frontend
           image: somnathambati/smartvote_frontend:latest
