--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,11 +33,9 @@ services:
     container_name: smartvote-nginx
     restart: always
     ports:
-      - "9090:80"
-      - "443:443"
+      - "9090:80"  # HTTP only for now
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/ssl:/etc/nginx/ssl
     depends_on:
       - frontend
       - backend
