--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,9 @@ services:
     container_name: smartvote-frontend
     restart: always
     environment:
-      - REACT_APP_API_URL=${PUBLIC_API_URL}
+      - REACT_APP_BACKEND_URL=http://backend-service:5000
     depends_on:
-      - backend
+      - backend-service
     networks:
       - smartvote-network
 
