--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,9 @@ services:
     container_name: smartvote-frontend
     restart: always
     environment:
-      - REACT_APP_BACKEND_URL=http://backend-service:5000
+      - REACT_APP_API_URL=${PUBLIC_API_URL}  # Ensure PUBLIC_API_URL is set in your environment
     depends_on:
-      - backend-service
+      - backend  # Corrected to backend instead of backend-services
     networks:
       - smartvote-network
 
