--- a/client/Dockerfile.frontend
+++ b/client/Dockerfile.frontend
@@ -1,31 +1,31 @@
-# Use a smaller Node.js base image
+# Stage 1: Build the React app
 FROM node:18-alpine AS build
 
-# Set working directory inside the container
 WORKDIR /app
 
-# Copy package files separately for better caching
+# Copy dependencies and install
 COPY package.json package-lock.json ./
-
-# Install dependencies
 RUN npm install
 
-# Copy the rest of the frontend files
-COPY . . 
-
-# Build the React app (includes .env)
+# Copy source and build
+COPY . .
 RUN npm run build
 
-# Use a lightweight web server to serve static files
-FROM node:18-alpine
+# Stage 2: Serve using NGINX
+FROM nginx:alpine
 
-WORKDIR /app
+# Remove default nginx page
+RUN rm -rf /usr/share/nginx/html/*
 
-# Copy the built React app from the build stage
-COPY --from=build /app/build /app/build
+# Copy built React app to nginx's public folder
+COPY --from=build /app/build /usr/share/nginx/html
 
-# Expose frontend port
-EXPOSE 3000
+# Copy custom nginx config (optional)
+# Make sure you have a valid nginx/default.conf file
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 
-# Serve the React app using npx serve
-CMD ["npx", "serve", "-s", "build", "-l", "3000"]
+# Expose default HTTP port
+EXPOSE 80
+
+# Start nginx server
+CMD ["nginx", "-g", "daemon off;"]
