--- a/client/Dockerfile.frontend
+++ b/client/Dockerfile.frontend
@@ -22,7 +22,7 @@ COPY --from=build /app/build /usr/share/nginx/html
 
 # Copy custom nginx config (optional)
 # Make sure you have a valid nginx/default.conf file
-COPY ../nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
 # Expose default HTTP port
 EXPOSE 80
