--- a/client/Dockerfile.frontend
+++ b/client/Dockerfile.frontend
@@ -1,7 +1,13 @@
-# Stage 1: Build the React app
+# Stage 1: Build the React app 
 FROM node:18-alpine AS build
 
 WORKDIR /app
+
+# Accept API URL as a build argument
+ARG REACT_APP_API_URL
+
+# Set it as an environment variable (only available during build)
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
 
 # Copy dependencies and install
 COPY package.json package-lock.json ./
@@ -9,6 +15,8 @@ RUN npm install
 
 # Copy source and build
 COPY . .
+
+# Build with the API URL
 RUN npm run build
 
 # Stage 2: Serve using NGINX
@@ -20,12 +28,8 @@ RUN rm -rf /usr/share/nginx/html/*
 # Copy built React app to nginx's public folder
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Copy custom nginx config (optional)
-# Make sure you have a valid nginx/default.conf file
+# Copy custom nginx config
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
-# Expose default HTTP port
 EXPOSE 80
-
-# Start nginx server
 CMD ["nginx", "-g", "daemon off;"]
