--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: somnathambati/smartvote_backend:latest
     container_name: smartvote-backend
     restart: always
+    ports:
+      - "5000:5000"
     environment:
       - NODE_ENV=production
       - MONGO_URI=${MONGO_URI}
@@ -17,27 +19,13 @@ services:
       timeout: 10s
       retries: 3
 
-  frontend:
-    image: somnathambati/smartvote_frontend:latest
-    container_name: smartvote-frontend
-    restart: always
-    environment:
-      - REACT_APP_API_URL=${PUBLIC_API_URL}  # Ensure PUBLIC_API_URL is set in your environment
-    depends_on:
-      - backend  # Corrected to backend instead of backend-services
-    networks:
-      - smartvote-network
-
   nginx:
-    image: nginx:alpine
+    image: somnathambati/smartvote_frontend:latest  # This includes built React + nginx
     container_name: smartvote-nginx
     restart: always
     ports:
-      - "9090:80"  # HTTP only for now
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - "9090:80"
     depends_on:
-      - frontend
       - backend
     networks:
       - smartvote-network
