--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -2,17 +2,30 @@ server {
     listen 80;
     server_name ec2-52-66-201-195.ap-south-1.compute.amazonaws.com;
 
+    # Serve the React frontend
     location / {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
+    # API Proxy to Backend
     location /api/ {
-        proxy_pass http://smartvote-backend:5000;
+        proxy_pass http://smartvote-backend:5000;  # Ensure the container name is correct
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Error handling
+    error_page 404 /404.html;
+    location = /404.html {
+        root /usr/share/nginx/html;
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
