--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -11,7 +11,7 @@ server {
 
     # API Proxy to Backend
     location /api/ {
-        proxy_pass http://smartvote-backend:5000;  # Ensure the container name is correct
+        proxy_pass http://52.66.201.195:5000;  # Ensure the container name is correct
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
