--- a/client/Dockerfile.frontend
+++ b/client/Dockerfile.frontend
@@ -4,13 +4,13 @@ FROM node:18-alpine AS build
 WORKDIR /app
 
 # Accept API URL as a build argument
-ARG REACT_APP_API_URL
+ARG REACT_APP_BACKEND_URL
 
 # Set it as an environment variable (only available during build)
-ENV REACT_APP_BACKEND_URL=$REACT_APP_API_URL
+ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
 
-# Create .env file explicitly
-RUN echo "REACT_APP_BACKEND_URL=$REACT_APP_API_URL" > .env
+# Create .env file explicitly (optional, if needed)
+RUN echo "REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL" > .env
 
 # Copy dependencies and install
 COPY package.json package-lock.json ./
