--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "sendgrid": "^5.2.3"
+  },
+  "devDependencies": {
+    "sonar-scanner": "^3.1.0"
   }
 }
